--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -371,6 +371,7 @@
 
         <!-- New Content-Type box -->
         <div class="content-type-box">
+        <label for="formData">Copy required Content-Type:</label><br><br>
             <p>Content-Type: application/x-www-form-urlencoded</p>
             <p>Content-Type: application/x-www-form-urlencoded; charset=UTF-8</p>
         </div>
