--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -14,11 +14,11 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start;  /* Align content to the top */
             flex-direction: column;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto; /* Enable scrolling */
+            min-height: 100vh; /* Ensure content takes full height */
         }
 
         h1 {
