--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -14,14 +14,15 @@
             padding: 0;
             display: flex;
             justify-content: center;
-            align-items: flex-start; /* Aligns items at the top */
+            align-items: center;
+            height: 100vh;
             flex-direction: column;
-            min-height: 100vh; /* Ensures the body takes up at least the full viewport height */
-            overflow-y: auto; /* Allows scrolling */
+            position: relative;
+            overflow-y: auto; /* Allow vertical scrolling */
         }
 
         h1 {
-            color: #00FF00;
+            color: #00FF00; /* Green for uniformity */
             text-align: center;
             font-size: 2.5rem;
             margin-bottom: 20px;
@@ -49,7 +50,6 @@
             animation: lightning-strike 1s infinite alternate;
             display: block;
             margin: 0 auto;
-            overflow-y: auto; /* Allow scrolling in the text area if the content is large */
         }
 
         /* New Content-Type box for x-www-form-urlencoded with glowing animation */
@@ -80,7 +80,7 @@
         }
 
         input[type="submit"] {
-            background-color: #00FF00;
+            background-color: #00FF00; /* Green for uniformity */
             color: white;
             border: none;
             padding: 12px 20px;
@@ -101,7 +101,7 @@
 
         .encoded-data {
             background-color: #333;
-            border: 2px solid #00FF00;
+            border: 2px solid #00FF00; /* Green for uniformity */
             padding: 20px;
             margin-top: 30px;
             border-radius: 10px;
@@ -112,12 +112,12 @@
             color: #fff;
             display: none;
             text-align: center;
-            max-height: 300px; /* Max height to avoid overflow */
-            overflow-y: auto; /* Allows vertical scrolling if the content is too large */
+            max-height: 300px;  /* Limit height */
+            overflow-y: auto;   /* Allow scrolling */
         }
 
         .encoded-data h2 {
-            color: #00FF00;
+            color: #00FF00; /* Green for uniformity */
             font-size: 1.8rem;
             margin-bottom: 15px;
             text-align: center;
@@ -128,8 +128,8 @@
             padding: 15px;
             border-radius: 8px;
             font-size: 1.1rem;
-            word-wrap: break-word;
-            white-space: pre-wrap;
+            word-wrap: break-word;   /* Allow wrapping of long words */
+            white-space: pre-wrap;   /* Preserve whitespace but allow wrapping */
             color: #fff;
             text-align: center;
         }
@@ -241,7 +241,7 @@
         .created-by {
             margin-bottom: 5px;
             font-size: 1.5rem;
-            color: #00FF00;
+            color: #00FF00; /* Green for uniformity */
             animation: glowingText 2s infinite alternate;
             font-weight: bold;
         }
@@ -251,7 +251,7 @@
             white-space: nowrap;
             animation: moveText 20s linear infinite;
             font-size: 1.5rem;
-            color: #00FF00;
+            color: #00FF00; /* Green for uniformity */
             font-weight: bold;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         }
@@ -318,7 +318,7 @@
 
             textarea {
                 width: 95%;
-                height: 150px;
+                height: 150px; /* Smaller height for small devices */
             }
 
             input[type="submit"] {
@@ -327,6 +327,11 @@
 
             .footer {
                 font-size: 0.9rem;
+            }
+
+            .encoded-data {
+                width: 95%;
+                max-height: 250px;  /* Adjust height for small screens */
             }
         }
     </style>
@@ -407,48 +412,46 @@
         function parseRawData(data) {
             const entries = {};
             const cleanedData = data.replace(/--[\w\d-]+\s+/g, '').trim();
-            const lines = cleanedData.split("\r\n");
+            const lines = cleanedData.split("\n").map(line => line.trim()).filter(line => line.length > 0);
 
-            let currentName = '';
-            let currentValue = '';
-            lines.forEach(line => {
-                const nameMatch = /name="([^"]+)"/.exec(line);
-                if (nameMatch) {
-                    currentName = nameMatch[1];
-                } else if (line.trim() !== '') {
-                    currentValue += line + '\r\n';
-                }
-                if (line.trim() === '') {
-                    if (currentName) {
-                        entries[currentName] = currentValue.trim();
-                        currentName = '';
-                        currentValue = '';
+            let fieldName = '';
+            let fieldValue = '';
+            let isName = true;
+
+            for (const line of lines) {
+                if (line.startsWith('Content-Disposition: form-data; name="')) {
+                    const nameMatch = line.match(/name="([^"]+)"/);
+                    if (nameMatch) {
+                        fieldName = nameMatch[1];
+                        isName = true;
                     }
+                } else if (isName) {
+                    fieldValue = line;
+                    entries[fieldName] = fieldValue;
+                    isName = false;
                 }
-            });
+            }
 
             return entries;
         }
 
         function encodeFormData(data) {
-            return Object.keys(data)
-                .map(key => encodeURIComponent(key) + '=' + encodeURIComponent(data[key]))
-                .join('&');
+            return Object.keys(data).map(key => `${encodeURIComponent(key)}=${encodeURIComponent(data[key])}`).join('&');
         }
 
         function showErrorPopup() {
-            const errorPopup = document.getElementById('errorPopup');
-            errorPopup.style.display = 'block';
+            const errorPopup = document.getElementById("errorPopup");
+            errorPopup.style.display = "block";
             setTimeout(() => {
-                errorPopup.style.display = 'none';
+                errorPopup.style.display = "none";
             }, 3000);
         }
 
         function showSuccessPopup() {
-            const successPopup = document.getElementById('successPopup');
-            successPopup.style.display = 'block';
+            const successPopup = document.getElementById("successPopup");
+            successPopup.style.display = "block";
             setTimeout(() => {
-                successPopup.style.display = 'none';
+                successPopup.style.display = "none";
             }, 3000);
         }
     </script>
