--- a/webkit_parser.html
+++ b/webkit_parser.html
@@ -18,11 +18,12 @@
             height: 100vh;
             flex-direction: column;
             position: relative;
-            overflow: auto;
+            overflow: hidden; /* Hide any overflow */
+            box-sizing: border-box; /* Prevents overflow due to padding/margins */
         }
 
         h1 {
-            color: #00FF00; /* Green for uniformity */
+            color: #00FF00;
             text-align: center;
             font-size: 2.5rem;
             margin-bottom: 20px;
@@ -37,7 +38,6 @@
         textarea {
             width: 90%;
             max-width: 600px;
-            min-width: 600px;
             height: 200px;
             padding: 10px;
             border-radius: 8px;
@@ -46,52 +46,37 @@
             font-size: 1rem;
             color: #fff;
             background-color: #333;
-            position: relative;
-            animation: lightning-strike 1s infinite alternate;
-            display: block;
             margin: 0 auto;
+            animation: lightning-strike 1s infinite alternate;
         }
 
-        /* New Content-Type box for x-www-form-urlencoded with glowing animation */
         .content-type-box {
             width: 90%;
             max-width: 600px;
-            min-width: 600px;
             padding: 10px;
             border-radius: 8px;
-            border: 2px solid #ddd;
             background-color: #333;
             color: #fff;
             font-family: 'Arial', sans-serif;
             font-size: 1rem;
             text-align: center;
             margin-top: 20px;
-            display: block;
-            margin: 0 auto;
             animation: glowingAnimation 1.5s infinite alternate;
         }
 
-        .content-type-box p {
-            font-size: 1rem;
-            margin: 0;
-            padding: 10px;
-            background-color: #444;
-            border-radius: 5px;
-        }
-
         input[type="submit"] {
-            background-color: #00FF00; /* Green for uniformity */
+            background-color: #00FF00;
             color: white;
             border: none;
             padding: 12px 20px;
             font-size: 1.1rem;
             cursor: pointer;
             border-radius: 5px;
-            transition: background-color 0.3s ease, transform 0.2s;
             margin-top: 15px;
             display: block;
             margin-left: auto;
             margin-right: auto;
+            transition: background-color 0.3s ease, transform 0.2s;
         }
 
         input[type="submit"]:hover {
@@ -101,34 +86,15 @@
 
         .encoded-data {
             background-color: #333;
-            border: 2px solid #00FF00; /* Green for uniformity */
+            border: 2px solid #00FF00;
             padding: 20px;
             margin-top: 30px;
             border-radius: 10px;
             width: 90%;
             max-width: 600px;
             box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            animation: lightning-strike 1s infinite alternate, popup 0.3s ease-out forwards;
             color: #fff;
             display: none;
-            text-align: center;
-        }
-
-        .encoded-data h2 {
-            color: #00FF00; /* Green for uniformity */
-            font-size: 1.8rem;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-
-        pre {
-            background-color: #222;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 1.1rem;
-            word-wrap: break-word;
-            white-space: pre-wrap;
-            color: #fff;
             text-align: center;
         }
 
@@ -161,20 +127,6 @@
             }
             100% {
                 box-shadow: 0 0 40px #fff, 0 0 70px #fff, 0 0 100px #fff;
-            }
-        }
-
-        /* Popup animation for encoded data */
-        @keyframes popup {
-            0% {
-                transform: scale(0.5);
-                opacity: 0;
-                box-shadow: 0 0 20px rgba(0, 255, 0, 0.7), 0 0 40px rgba(0, 255, 0, 0.7);
-            }
-            100% {
-                transform: scale(1);
-                opacity: 1;
-                box-shadow: 0 0 20px rgba(0, 255, 0, 0.7), 0 0 40px rgba(0, 255, 0, 0.7);
             }
         }
 
@@ -239,7 +191,7 @@
         .created-by {
             margin-bottom: 5px;
             font-size: 1.5rem;
-            color: #00FF00; /* Green for uniformity */
+            color: #00FF00;
             animation: glowingText 2s infinite alternate;
             font-weight: bold;
         }
@@ -249,25 +201,13 @@
             white-space: nowrap;
             animation: moveText 20s linear infinite;
             font-size: 1.5rem;
-            color: #00FF00; /* Green for uniformity */
+            color: #00FF00;
             font-weight: bold;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         }
 
         @keyframes glowingText {
             0% {
-                color: #00FF00;
-                text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00, 0 0 20px #00FF00;
-            }
-            25% {
-                color: #00FF00;
-                text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00, 0 0 20px #00FF00;
-            }
-            50% {
-                color: #00FF00;
-                text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00, 0 0 20px #00FF00;
-            }
-            75% {
                 color: #00FF00;
                 text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00, 0 0 20px #00FF00;
             }
@@ -290,60 +230,23 @@
             }
         }
 
-        /* Animated Background (Bouncing Balls and Bubbles) */
-        @keyframes bounce {
-            0% { transform: translateY(0); }
-            50% { transform: translateY(-50px); }
-            100% { transform: translateY(0); }
-        }
-
-        @keyframes floatBubble {
-            0% { transform: translateY(100vh); opacity: 1; }
-            100% { transform: translateY(-10vh); opacity: 0; }
-        }
-
-        /* Create 100 bouncing balls and bubbles */
-        .bouncing-ball,
-        .bubble {
-            position: absolute;
-            border-radius: 50%;
-            opacity: 0.8;
-            animation-duration: 4s;
-            animation-timing-function: ease-in-out;
-            animation-iteration-count: infinite;
-        }
-
-        .bouncing-ball {
-            width: 30px;
-            height: 30px;
-            background-color: #00FF00; /* Green for uniformity */
-            animation-name: bounce;
-        }
-
-        .bubble {
-            width: 20px;
-            height: 20px;
-            background-color: rgba(0, 255, 0, 0.6); /* Green for uniformity */
-            animation-name: floatBubble;
-        }
-
-        /* Additional styles for bouncing balls and bubbles */
-        .bouncing-ball:nth-child(even) {
-            background-color: #00FF00;
-        }
-
-        .bubble:nth-child(odd) {
-            background-color: rgba(0, 255, 0, 0.6);
-        }
-
         /* Media Queries for responsiveness */
         @media (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
             h1 {
                 font-size: 2rem;
             }
 
             textarea {
                 width: 95%;
+                height: 150px;
+            }
+
+            input[type="submit"] {
+                font-size: 1rem;
             }
 
             .footer-content {
